--- a/assets/style.css
+++ b/assets/style.css
@@ -12,10 +12,18 @@ body{
     justify-content: center;
     align-items: center;
 }
+header{
+    font-size: 50px;
+    justify-self: center;
+    color: #fff;
+    background-color: #17181A;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
 div{
     background: linear-gradient(191.34deg, #17181A -4.95%, #17181A 103.74%);
     border-radius: 39px;
-    height: 788px;
+    height: 710px;
     width: 495px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -37,12 +45,15 @@ button:hover{
 button:active{
     opacity: 0.5;
 }
-p{
+input{
+    background-color: #17181A;
     grid-column: 1/5 ;
-    grid-row:1/3 ;
-    font-size: 55px;
+    grid-row: 1/3 ;
+    font-size: 85px;
+    border: none;
+    outline: none;
     text-align: right;
-    padding-bottom: 12%;
+    padding-bottom: 8%;
 }
 .number{
     background-color: #303136;
